# anix

./: .directory  .gitignore  COPYING.txt  Cargo.toml  Makefile  README.md  README.md.backup  Xargo.toml  boot.s  kernel.c  linker.ld
C/: kernel.c
C/lib/: filesystem.h  input.c  input.h  keypress.c  screen.c  strings.c
LD/: linker.ld
Others/: grub.cfg
S/: boot.s
SH/: build.sh  clean.sh  launch.sh  start.sh
kernel/: Cargo.toml
kernel/.cargo/: config
kernel/lib/multiboot2-elf64/src/: elf_sections.rs  memory_map.rs
kernel/src/: commands.rs  common.rs  drivers.rs  errors.rs  gdt.rs  idt.rs  lib.rs  screen.rs  serial.rs  sse.rs  time.rs
kernel/src/arch/x86_64-qemu-Anix/: linker.ld
kernel/src/arch/x86_64-qemu-Anix/asm/: boot.asm  long_mode_init.asm  multiboot.asm
kernel/src/arch/x86_64-unknown-linux-gnu/: linker.ld
kernel/src/arch/x86_64-unknown-linux-gnu/asm/: boot.asm  multiboot.asm
kernel/src/device/: mod.rs  rtc.rs
kernel/src/disk/: mod.rs
kernel/src/disk/sata/: disk_ata.rs  disk_atapi.rs  fis.rs  hba.rs  mod.rs
kernel/src/elf/: mod.rs
kernel/src/fs/: mbr.rs  mod.rs  partition_manager.rs  partitions.rs
kernel/src/fs/ext2/: file.rs  gd.rs  inode.rs  mod.rs  superblock.rs
kernel/src/fs/vfs/: mod.rs
kernel/src/graphics/: mod.rs
kernel/src/graphics/vbe/: colors.rs  geom.rs  mod.rs
kernel/src/graphics/vesa/: colors.rs  geom.rs  mod.rs  text.rs
kernel/src/io/: dma.rs  io.rs  mmio.rs  mod.rs  pio.rs
kernel/src/irq/: exceptions.rs  irq.rs  irqid.rs  mod.rs  syscalls.rs
kernel/src/memory/: consts.rs  mod.rs
kernel/src/memory/heap/: mod.rs
kernel/src/memory/paging/: mapper.rs  mod.rs  temporary_page.rs
kernel/src/memory/table/: mod.rs
kernel/src/pci/: mod.rs
kernel/src/processes/: context.rs  mod.rs  registers.rs  scheduler.rs
kernel/src/syscall/: call.rs  file.rs  memory.rs  misc.rs  mod.rs  number.rs  process.rs  time.rs
kernel/src/task/: mod.rs  scheduler.rs
kernel/src/tests/: memory.rs  mod.rs
kernel/src/usb/: mod.rs
kernel/src/usb/xhci/: command.rs  config.rs  context.rs  descriptor.rs  device.rs  doorbell.rs  endpoint.rs  event.rs  interface.rs  mod.rs  port.rs  registers.rs  ring.rs  setup.rs  trb.rs
kernel/src/user/: input.rs  mod.rs  switch.rs
lib/liballoc/: Cargo.toml
lib/multiboot2-elf64/src/: memory_map.rs
lib/rlibc/src/: lib.rs
mk/: build.sh  colors.sh  images.sh  prompt.sh
root/boot/grub/: grub.cfg
root/home/user/: hello.txt  hello3.txt
src/: .directory  commands.rs  common.rs  drivers.rs  errors.rs  filesystem.c  fs.rs  gdt.rs  idt.rs  interrupts.rs  lib.rs  main.rs  malloc.rs  mm.rs  numbers.rs  pti.rs  scheduler.rs  screen.rs  serial.rs  shutdown.rs  time.rs
src/arch/qemu-x86_64/: linker.ld
src/arch/qemu-x86_64/asm/: task.asm
src/arch/x86_64/: linker.ld
src/arch/x86_64-qemu-Anix/asm/: boot.asm  multiboot.asm
src/arch/x86_64-unknown-linux-gnu/asm/: long_mode_init.asm  multiboot.asm  task.asm
src/arch/x86_64/asm/: boot.asm  long_mode_init.asm
src/asm/: boot.asm  linker.ld  long_mode_init.asm  multiboot.asm
src/c/: controller.c  controller.h  desc.c  desc.h  dev.c  dev.h  driver.c  driver.h  io.c  io.h  kmalloc.c  kmalloc.h  lib.c  lib.h  list.h  main.c  mm.c  mm.h  pci.c  pci.h  pit.c  registry.c  registry.h  req.h  screen.c  screen.h  types.h  usb.c  usb.h
src/c/disk/: disk.c  disk.h
src/c/file/: file.c  file.h
src/c/fs/ext2/: ext2.c  ext2.h
src/c/fs/initrd/: initrd.c  initrd.h
src/c/fs/vfs/: vfs.c  vfs.h
src/c/pci/: driver.c  driver.h  pci.c  pci.h  registry.c  registry.h
src/disk/: mod.rs
src/disk/sata/: controller.rs  disk_ata.rs  disk_atapi.rs  driver.rs  fis.rs  hba.rs  hw.rs  mod.rs  port.rs  storage.rs
src/files/: hello2.txt  hello5.txt
src/fs/: fs.rs  io.rs  mod.rs  partitions.rs  pci.rs  pic.rs  pio.rs
src/fs/ext2/: gd.rs  inode.rs  mod.rs  superblock.rs
src/graphics/: draw.rs  mod.rs
src/graphics/vbe/: geom.rs  mod.rs
src/graphics/vga/: mod.rs
src/grub/: grub.cfg
src/grub/i386-pc/: core.img  eltorito.img  http.mod  linux.mod  modinfo.sh  multiboot.mod  multiboot2.mod  normal.mod
src/grub/themes/breeze/: NotoSans-Bold-14.pf2  NotoSans-Regular-10.pf2  NotoSans-Regular-12.pf2  NotoSans-Regular-32.pf2  theme.txt
src/io/: dma.rs  io.rs  mmio.rs  mod.rs
src/irq/: exceptions.rs  irq.rs  irqid.rs  mod.rs  syscalls.rs
src/lib/libstd/: Cargo.toml  lib.rs  macros.rs  panic.rs  panicking.rs
src/memory/: mod.rs
src/memory/heap/: mod.rs
src/memory/paging/: mapper.rs  mod.rs  temporary_page.rs
src/memory/table/: mod.rs
src/pci/: mod.rs
src/root/home/user/: hello.txt
src/scripts/: make_initrd.c
src/task/: mod.rs  scheduler.rs
src/usb/: mod.rs
src/usb/xhci/: command.rs  context.rs  descriptor.rs  device.rs  doorbell.rs  event.rs  mod.rs  port.rs  registers.rs  ring.rs  setup.rs  trb.rs
src/user/: input.rs  mod.rs  switch.rs
userspace/: mk.sh
userspace/src/bins/c-test/: Makefile  c-test.c
userspace/src/bins/rust-test/: Cargo.toml  Makefile  Xargo.toml  x86_64-binary-Anix.json
userspace/src/bins/rust-test/src/: main.rs
userspace/src/c-test/: Makefile  c-test.c
userspace/src/rust-test/: Cargo.toml  Makefile  rust-test
userspace/src/rust-test/src/: lib.rs
