[package]
authors = ["Nicolas Fouquet <nfouquet@mailfence.com>"]
name = "Anix"
version = "0.2.0"
edition = "2018"

[dependencies]
spin = "0.4.9"
volatile = "0.2.3"
uart_16550 = "0.1.0"
x86_64 = "0.2.8"
pic8259_simple = "0.1.1"
pc-keyboard = "0.3.1"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

# the profile used for `cargo build`
[profile.dev]
panic = "abort" # disable stack unwinding on panic

# the profile used for `cargo build --release`
[profile.release]
panic = "abort" # disable stack unwinding on panic

[lib]
crate-type = ["staticlib"]
