[package]
authors = ["Nicolas Fouquet <nfouquet@mailfence.com>"]
name = "Anix"
version = "0.0.1"

[dependencies]
spin = "0.5.0"
volatile = "0.2.6"
bitflags = "1.0.4"
uart_16550 = "0.1.0"
x86_64 = "0.5.0"
pic8259_simple = "0.1.1"
pc-keyboard = "0.5.0"
x86 = "0.14.0"
ascii = "0.9"
arrayvec = "0.4.10"
multiboot2 = "0.3.2"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

# the profile used for `cargo build`
[profile.dev]
panic = "abort" # disable stack unwinding on panic

# the profile used for `cargo build --release`
[profile.release]
panic = "abort" # disable stack unwinding on panic

[lib]
crate-type = ["staticlib"]
