[package]
authors = ["Nicolas Fouquet <nfouquet@mailfence.com>"]
name = "Anix"
version = "0.0.2"

[dependencies]
byteorder = {version = "1.3.2", default-features = false}
bitflags = "1.0.4"
multiboot2 = "0.3.2"
once = "*"
pc-keyboard = "0.5.0"
pic8259_simple = "0.1.1"
spin = "0.5.0"
uart_16550 = "0.1.0"
volatile = "0.2.6"
x86 = "0.14.0"
x86_64 = "0.7.0"
rlibc = "1.0.0"
plain = "0.2"

[dependencies.lazy_static]
features = ["spin_no_std"]
version = "1.0"

[dependencies.genio]
default-features = false
version = "0.2.0"

[lib]
crate-type = ["staticlib"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[features]
x86_64-unknown-linux-gnu = []
x86_64-qemu-Anix = []
