[package]
authors = ["Nicolas Fouquet <nfouquet@mailfence.com>"]
name = "Anix"
version = "0.0.3"
edition = "2018"

[dependencies]
byteorder = {version = "1.3.2", default-features = false}
bitflags = "1.2.1"
multiboot2 = {path = "lib/multiboot2-elf64"}
once = "0.3.3"
pc-keyboard = "0.5.0"
pic8259_simple = "0.1.1"
spin = "0.5.2"
uart_16550 = "0.2.1"
volatile = "0.2.6"
x86 = "0.29.0"
x86_64 = "0.8.2"
rlibc = "1.0.0"
plain = "0.2.3"
bit_field = "0.10.0"

[dev-dependencies]
bootloader = { version = "0.8.0", features = ["map_physical_memory"]} # During tests, we launch Anix with bootimage

[dependencies.font8x8]
version = "0.2.5"
default-features = false
features = ["unicode"]

[dependencies.linked_list_allocator]
features = ["use_spin"]
version = "0.6.4"

[dependencies.goblin]
default-features = false
features = ["elf32", "elf64", "endian_fd", "alloc"]
version = "0.0.24"

[dependencies.lazy_static]
features = ["spin_no_std"]
version = "1.4"

[dependencies.genio]
default-features = false
version = "0.2.0"

[lib]
name = "anix"
crate-type = ["staticlib"]
path = "src/lib.rs"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[features]
x86_64-unknown-linux-gnu = []
x86_64-qemu-Anix = []

[package.metadata.bootimage]
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04",
    "-serial", "stdio",
    "-display", "none",
    "-enable-kvm",
]
test-success-exit-code = 33         # (0x10 << 1) | 1
